--- a/regex.ipynb
+++ b/regex.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -31,15 +31,175 @@
        "['support@example.com', 'sales@example.org']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pattern = r'\\S+@\\w+\\.\\w+'\n",
+    "email_pattern = r'\\S+@\\w+\\.\\w+'\n",
     "\n",
-    "re.findall(pattern, \"Contact us at support@example.com or sales@example.org\")"
+    "re.findall(email_pattern, \"Contact us at support@example.com or sales@example.org\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 2: Phone Number Validation  \n",
+    "Problem: Validate and extract US phone numbers in the format xxx-xxx-xxxx.  \n",
+    "String: \"My numbers are 123-456-7890 or 333-333-3333\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123-456-7890', '333-333-3333']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phone_pattern = r'\\d{3}-\\d{3}-\\d{4}'\n",
+    "re.findall(phone_pattern, \"My numbers are 123-456-7890 or 333-333-3333\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 3: Password Strength Check  \n",
+    "Problem: Check if a password is at least 8 characters long, contains a digit, an uppercase, and a lowercase letter.  \n",
+    "String: \"Password1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Password1']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "password_pattern = r'\\w{8,}'\n",
+    "re.findall(password_pattern, \"Password1\") # Positive test case\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(password_pattern, \"Passwor\") # Negative test case"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 4: Extracting Domain Name  \n",
+    "Problem: Extract the domain name from an email address.  \n",
+    "String: \"user@example.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['@example.com']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "domain_pattern = r'@\\w+\\.\\w+'\n",
+    "re.findall(domain_pattern, \"user@example.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['@gmail.com']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(domain_pattern, \"cs@gmail.com\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 5: Validating an IP Address  \n",
+    "Problem: Check if a string is a valid IPv4 address.  \n",
+    "String: \"192.168.1.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['192.168.1.1']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ip_pattern = r'\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}'\n",
+    "re.findall(ip_pattern,\"192.168.1.1\")"
    ]
   }
  ],
